--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.5.1",
     "@turf/turf": "^6.3.0",
     "expo": "~41.0.1",
     "expo-location": "~12.0.4",
@@ -27,7 +28,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
