--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.3"
+    "react-redux": "^7.2.3",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
